--- a/requirements.txt
+++ b/requirements.txt
@@ -1,136 +1,9 @@
-absl-py==1.2.0
-anyio==3.6.1
-appnope==0.1.3
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.8
-astunparse==1.6.3
-attrs==22.1.0
-Babel==2.10.3
-backcall==0.2.0
-beautifulsoup4==4.11.1
-bleach==5.0.1
-cachetools==5.2.0
-certifi==2022.6.15
-cffi==1.15.1
-charset-normalizer==2.1.1
-click==8.1.3
-cloudpickle==2.2.0
-cycler==0.11.0
-debugpy==1.6.3
-decorator==5.1.1
-defusedxml==0.7.1
-dm-tree==0.1.7
-entrypoints==0.4
-executing==0.10.0
-fastjsonschema==2.16.1
-flatbuffers==1.12
-fonttools==4.36.0
-gast==0.4.0
-google-auth==2.11.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.47.0
-h5py==3.7.0
-idna==3.3
-ipykernel==6.15.1
-ipython==8.4.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.1
-jedi==0.18.1
-Jinja2==3.1.2
-joblib==1.1.0
-json5==0.9.10
-jsonschema==4.13.0
-jupyter==1.0.0
-jupyter-client==7.3.4
-jupyter-console==6.4.4
-jupyter-core==4.11.1
-jupyter-server==1.18.1
-jupyterlab==3.4.5
-jupyterlab-pygments==0.2.2
-jupyterlab-server==2.15.0
-jupyterlab-widgets==3.0.2
-kaggle==1.5.12
-keras==2.9.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.4
-libclang==14.0.6
-lxml==4.9.1
-Markdown==3.4.1
-MarkupSafe==2.1.1
-matplotlib==3.5.3
-matplotlib-inline==0.1.6
-mistune==0.8.4
-nbclassic==0.4.3
-nbclient==0.6.6
-nbconvert==6.5.3
-nbformat==5.4.0
-nest-asyncio==1.5.5
-notebook==6.4.12
-notebook-shim==0.1.0
-notifiers==1.3.3
-numpy==1.23.2
-oauthlib==3.2.0
-opt-einsum==3.3.0
-packaging==21.3
-pandas==1.4.3
-pandocfilters==1.5.0
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.2.0
-prometheus-client==0.14.1
-prompt-toolkit==3.0.30
-protobuf==3.19.4
-psutil==5.9.1
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-Pygments==2.13.0
-pyparsing==3.0.9
-pyrsistent==0.18.1
-python-dateutil==2.8.2
-python-slugify==6.1.2
-pytz==2022.2.1
-pyzmq==23.2.1
-qtconsole==5.3.1
-QtPy==2.2.0
-requests==2.28.1
-requests-oauthlib==1.3.1
-rsa==4.9
-scikit-learn==1.1.2
-scipy==1.9.0
-seaborn==0.11.2
-Send2Trash==1.8.0
-six==1.16.0
-sklearn==0.0
-sniffio==1.2.0
-soupsieve==2.3.2.post1
-split-folders==0.5.1
-stack-data==0.4.0
-tensorboard==2.9.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow-estimator==2.9.0
-tensorflow-macos==2.9.2
-tensorflow-metal==0.5.1
-tensorflow-probability==0.18.0
-termcolor==1.1.0
-terminado==0.15.0
-text-unidecode==1.3
-threadpoolctl==3.1.0
-tinycss2==1.1.1
-tornado==6.2
-tqdm==4.64.1
-traitlets==5.3.0
-typing_extensions==4.3.0
-urllib3==1.26.11
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==1.3.3
-Werkzeug==2.2.2
-widgetsnbextension==4.0.2
-wrapt==1.14.1
+keras==2.12.0
+keras_tuner==1.3.5
+matplotlib==3.7.0
+numpy==1.23.4
+pandas==1.5.3
+protobuf==3.20.3
+scikit_learn==1.2.2
+seaborn==0.12.2
+tensorflow==2.12.0
